# certificator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-adhoc.yml  deploy.yml
docs/: deploy-cloud-run.md
src/certificator/: __init__.py  api.py  certificates.py
tests/: test_textbox.py
