[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
authors = [
    {email = "contact@idems.international", name = "IDEMS International"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi~=0.109",
    "Pillow~=10.0",
    "pydantic-settings~=2.1",
]
description = "Create customisable award certificates"
dynamic = ["version"]
keywords = []
license = {text = "GPL-3.0-or-later"}
name = "certificator"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/IDEMSInternational/certificator"
Repository = "https://github.com/IDEMSInternational/certificator"

[tool.setuptools_scm]
version_file = "src/certificator/_version.py"
